Attempted fix for strange firefox overflow issue.

--- a/demo/styles/generic.css
+++ b/demo/styles/generic.css
@@ -1,54 +1,73 @@
-
 /* CSS */
 
-h1 {
-	font-size: 2.5em;
-	font-weight: bold;
-	margin: 0.67em 0px;
+body {	
+    font-size: 1em;
+	font-weight:normal;
+    font-family: Arial, Helvetica, sans-serif;
+    padding-left: 0px;
+    padding-right: 0px;
+    color: #000000;
 }
-h2 {
-	font-size: 2em;
-	font-weight: bold;
-	margin: 0.83em 0px;
-}
-h3 {
-	font-size: 1.5em;
-	font-weight: bold;
-	margin: 0.83em 0px;
-}
-
-code.code, pre.code {
-	border: 5px solid #DDD;
-	padding: 7px 0 5px;
-	font-size: 14px;
-	white-space: pre;
-	overflow: auto;
-	max-height: 500px;
-	width: 100%;
-	display: block;
-}
-
 strong {
 	font-weight:bold;
 }
 em {
 	font-style:italic;
 }
-
-body {
-    padding-left: 0px;
-    padding-right: 0px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: #000000;
+body.loading {
+	cursor:wait;
 }
 
-p {
+h1 {
+	font-size: 2.5em;
+	font-weight: bold;
+	margin: 0.67em 0px 0.5em;
+}
+h2 {
+	font-size: 2em;
+	font-weight: bold;
+	margin: 0.83em 0px 0.4em;
+}
+h3 {
+	font-size: 1.5em;
+	font-weight: bold;
+	margin: 0.83em 0px 0.3em;
+}
+h4 {
+	font-size: 1.2em;
+	font-weight: bold;
+	margin: 0.83em 0px 0.3em;
+}
+.section .title {
+    font-size: 1.2em;
+    font-weight: bold;
+}
+
+code.code, pre.code {
+	border: 5px solid #DDD;
+	padding: 7px 0 5px;
+	font-size: 14px;
+	overflow: auto;
+	max-height: 500px;
+	width: 100%;
+	white-space: pre;
+	display: block;
+}
+body code.prettyprint, body pre.prettyprint {
+	border: 5px solid #DDD;
+	padding: 7px 0 5px;
+}
+
+p,
+.section div {
     padding: 0px;
-    margin: 0px;
-}
-p, .section.about p {
 	margin:1em 0;
 }
+.section.install p,
+.section.install div {
+	margin:0.2em 0 1em;
+}
+
 
 textarea {
 	width: 100%;
@@ -98,9 +117,6 @@ a.help:visited {
 	border-bottom:1px dotted #551A8B;
 }
 
-.section.install h3 {
-	margin: 0.83em 0px 0.2em;
-}
 .section ul.features {
 	display: block;
 	list-style: disc;
@@ -111,16 +127,27 @@ a.help:visited {
 	display: list-item;
 }
 
+.section ul.install,
+.section ul.install li {
+	list-style:disc outside none;
+}
+.section ul.install {
+	margin-left:2em;
+}
+.section ul.install li {
+	display: list-item;
+}
+
 .section span.code {
     font-family: "Courier New", Courier, monospace;
     margin-left: 10px;
     padding-left: 10px;
-    font-size: 11px;
+    font-size: 0.8em;
     border-left: 1px solid #000;
 }
 
 .section .link {
-    font-size: 12px;
+    font-size: 0.8em;
     font-style: italic;
     padding-left: 10px;
     margin-left: 10px;
@@ -130,28 +157,15 @@ a.help:visited {
     text-decoration: underline;
 }
 
-.section .title {
-    font-weight: bold;
-    font-size: 16px;
-}
-
 .clear {
     clear: left;
 }
 
-.section.header {
-    text-align: center;
-    font-size: 12px;
-    padding-top: 10px;
-    border-top: none;
-}
-
+.section.header,
 .section.footer {
     text-align: center;
-    font-size: 12px;
     padding-top: 10px;
 }
-
-body.loading {
-	cursor:wait;
+.section.header {
+    border-top: none;
 }
